--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -845,15 +845,15 @@
  ICE.Nat_Populism_2016_desc: "Right-wing Populist - Flokkur Fólksins (People's Party) is a populist party that are against immigration and cooperation with the European Union, and otherwise seek to combat poverty and corruption."
 
  ### Iraq ###
- IRQ.liberalism: "£IRQ_liberalism_small Al-Wifaq Al-Watani Al-'Iraqi"
+ IRQ.liberalism: "£IRQ_liberalism_small (INA) Iraqi National Accord"
  IRQ.liberalism_icon: "£IRQ_liberalism_small"
- IRQ.liberalism_desc: "Liberal - The Iraqi National Accord was founded in London in 1991 as the primary non-Tehran based opposition to Saddam Hussein. It's primary source of funding has historically come from Saudi Arabia, UK and the United States. In 1996 it attempted a failed coup against Saddam with the help of the CIA."
+ IRQ.liberalism_desc: "(Liberalism) - Iraqi National Accord (Arabic: Al-Wifaq Al-Watani Al-'Iraqi)\n\nThe Iraqi National Accord was founded in London in 1991 as the primary non-Tehran based opposition to Saddam Hussein. It's primary source of funding has historically come from Saudi Arabia, UK and the United States. In 1996 it attempted a failed coup against Saddam with the help of the CIA."
  IRQ.liberalism_2017: "£IRQ_liberalism_2017_small Iraqi National Movement"
  IRQ.liberalism_2017_icon: "£IRQ_liberalism_2017_small"
  IRQ.liberalism_2017_desc: "Liberal - The Iraqi National Movement was a coalition founded on the basis of secularism and non-sectarianism, with a mix of some Iraqi Nationalism. It is comprised of some of Iraq's largest secular parties, including Al Wataniya."
- IRQ.socialism: "£IRQ_national_congress_small Al-Moutammar Al-Watani"
+ IRQ.socialism: "£IRQ_national_congress_small (INC) Iraqi National Congress"
  IRQ.socialism_icon: "£IRQ_national_congressa_small"
- IRQ.socialism_desc: "Welfare State - The Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
+ IRQ.socialism_desc: "(Liberalism) - Iraqi National Accord (Arabic: Al-Moutammar Al-Watani)\n\nThe Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
  IRQ.conservatism: "£IRQ_conservatism_small Islamic Dawa Party - Iraq organisation"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
  IRQ.conservatism_desc: "conservatives - Throughout Saddam Hussein's dictatorial rule, the Dawa party was subjected to a brutal campaign of Persecution and extermination, forcing most of its surviving leaders to flee to neighbouring nations and Europe, where they continued to lead the activists who remained in the country fighting the regime with organized insurrection. However, over time, disagreements and confrontations emerged between certain party members who remained in the nation and the exiled leaders, causing the party to split and a portion of the underground organisation within Iraq to form the Islamic Dawa Party-Iraq Organization led by Hashim Al-Mosawy, the party's head, who is well-known and admired among the Iraqi Shias."
