IRQ parties localized

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -857,48 +857,48 @@
  IRQ.conservatism: "£IRQ_conservatism_small Islamic Dawa Party - Iraq organisation"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
  IRQ.conservatism_desc: "conservatives - Throughout Saddam Hussein's dictatorial rule, the Dawa party was subjected to a brutal campaign of Persecution and extermination, forcing most of its surviving leaders to flee to neighbouring nations and Europe, where they continued to lead the activists who remained in the country fighting the regime with organized insurrection. However, over time, disagreements and confrontations emerged between certain party members who remained in the nation and the exiled leaders, causing the party to split and a portion of the underground organisation within Iraq to form the Islamic Dawa Party-Iraq Organization led by Hashim Al-Mosawy, the party's head, who is well-known and admired among the Iraqi Shias."
- IRQ.Conservative: "£IRQ_Conservative_small Hizb ad-Da'wa al-Islāmiyya"
+ IRQ.Conservative: "£IRQ_Conservative_small (IDP) Islamic Dawa Party"
  IRQ.Conservative_icon: "£IRQ_Conservative_small"
- IRQ.Conservative_desc: "Reactionary - The Islamic Dawa Party is a Shiite religious party that drew inspiration from the late Iraqi cleric al-Sadr. However, it gradually fell under the influence of Iran and engaged in several assassination plots against Saddam Hussein. It's primary point of contrast with ISCI is that it belives political power should reside with the wider Ummah, not just concentrated among Islamic Scholars."
- IRQ.Vilayat_e_Faqih: "£IRQ_Vilayat_e_Faqih_small Munazzama Badr"
+ IRQ.Conservative_desc: "(Islamism) - Islamic Dawa Party (Arabic: Hizb ad-Da'wa al-Islāmiyya)\n\nThe Islamic Dawa Party is a Shiite religious party that drew inspiration from the late Iraqi cleric al-Sadr. However, it gradually fell under the influence of Iran and engaged in several assassination plots against Saddam Hussein. It's primary point of contrast with ISCI is that it belives political power should reside with the wider Ummah, not just concentrated among Islamic Scholars."
+ IRQ.Vilayat_e_Faqih: "£IRQ_Vilayat_e_Faqih_small (BB) Badr Brigades"
  IRQ.Vilayat_e_Faqih_icon: "£IRQ_Vilayat_e_Faqih_small"
- IRQ.Vilayat_e_Faqih_desc: "Hardline Shiite Revolutionary - The Badr Organization originates as the armed wing of ISCI, but has since evolved into a independent political organization inspired by Hezbollah. It's politics and military operations are largely controlled by Iran's Revolutionary Guard."
- IRQ.Mod_Vilayat_e_Faqih: "£IRQ_Mod_Vilayat_e_Faqih_small Al-Majlis Al-A'ala Al-Islami Al-'Iraqi"
+ IRQ.Vilayat_e_Faqih_desc: "(Shi'ite Militarism) - Badr Brigades (Arabic: Munazzama Badr)\n\nThe Badr Organization originates as the armed wing of ISCI, but has since evolved into a independent political organization inspired by Hezbollah. It's politics and military operations are largely controlled by Iran's Revolutionary Guard."
+ IRQ.Mod_Vilayat_e_Faqih: "£IRQ_Mod_Vilayat_e_Faqih_small (ISCI) Islamic Supreme Council of Iraq"
  IRQ.Mod_Vilayat_e_Faqih_icon: "£IRQ_Mod_Vilayat_e_Faqih_small"
- IRQ.Mod_Vilayat_e_Faqih_desc: "Moderate Shiite Revolutionary - The Islamic Supreme Council of Iraq was established in Iran in 1982 as the \"Supreme Council for the Islamic Revolution in Iraq\". While willing to work alongside other parties in a government, it's long-term aim is to establish a Islamic Republic controlled by Islamic scholars, similar to Iran."
- IRQ.Caliphate: "£generic_Caliphate_small Islamic State of Iraq"
- IRQ.Caliphate_desc: "Salafist Jihadism - The Islamic State of Iraq, often referred to as \"al-Qaeda in Iraq\", was formed in 1999 under the banner of \"Jama'at al-Tawhid wal-Jihad\" by the Jordanian terrorist Abu Musab al-Zarqawi. Widely regarded as the most brutal branch of al-Qaeda, it has led a strategy of creating chaos by killing Shiite Muslims and ethno-religious minorities."
+ IRQ.Mod_Vilayat_e_Faqih_desc: "(Shi'ite Revolutionaries) - Islamic Supreme Council of Iraq (Arabic: Al-Majlis Al-A'ala Al-Islami Al-'Iraqi)\n\nThe Islamic Supreme Council of Iraq was established in Iran in 1982 as the \"Supreme Council for the Islamic Revolution in Iraq\". While willing to work alongside other parties in a government, it's long-term aim is to establish a Islamic Republic controlled by Islamic scholars, similar to Iran."
+ IRQ.Caliphate: "£generic_Caliphate_small (ISI) Islamic State of Iraq"
+ IRQ.Caliphate_desc: "(Salafist Jihadist) - Islamic State of Iraq (Arabic: Jama'at al-Tawhid wal-Jihad)\n\nThe Islamic State of Iraq, often referred to as \"al-Qaeda in Iraq\", was formed in 1999 under the banner of \"Jama'at al-Tawhid wal-Jihad\" by the Jordanian terrorist Abu Musab al-Zarqawi. Widely regarded as the most brutal branch of al-Qaeda, it has led a strategy of creating chaos by killing Shiite Muslims and ethno-religious minorities."
  IRQ.Neutral_conservatism_2017: "£IRQ_Neutral_conservatism_small Victory Alliance"
  IRQ.Neutral_conservatism_2017_icon: "£IRQ_Neutral_conservatism_small"
  IRQ.Neutral_conservatism_2017_desc: "Conservative - Victory Alliance. Losing the struggle for leadership in the Islamic Dawa Party, former PM Haider al-Abadi founded the Victory Alliance as his personal political vehicle. It is a reasonably moderate and pragmatic Shiite Islamist Party, though with a legacy of sectarianism from al-Abadi time as Prime Minister."
  IRQ.Neutral_Autocracy: "£generic_Neutral_Autocracy_small (§HCPA§!) Coalitional Provisional Authority"
  IRQ.Neutral_Autocracy_desc: "The Coalitional Provisional Authority has been established in order to transition Iraq into a better form of governance established the vote of the Iraqi people."
  IRQ.Neutral_Autocracy_icon: "£generic_Neutral_Autocracy_small"
- IRQ.Neutral_Communism: "£IRQ_Neutral_Communism_small Al-hizb aš-šiyū'ī al-'irāqī"
+ IRQ.Neutral_Communism: "£IRQ_Neutral_Communism_small (ICP) Iraqi Communist Party"
  IRQ.Neutral_Communism_icon: "£IRQ_Neutral_Communism_small"
- IRQ.Neutral_Communism_desc: "Communist - The Iraqi Communist Party has long dominated leftist politics in Iraq. It's uneasy alliance with the Ba'ath Party, brokered by the Soviet Union, broke down in 1979, and it has since advocated armed struggle. It is secular and socialist."
- IRQ.Neutral_Muslim_Brotherhood: "£IRQ_islamic_party Hizb al-Islami al-Iraqi"
- IRQ.Neutral_Muslim_Brotherhood_desc: "Moderate Islamist - The Iraqi Islamic Party is the official branch of the Muslim Brotherhood in Iraq, and function as one of the primary vehicles of Iraq's Sunni minority."
+ IRQ.Neutral_Communism_desc: "(Classical Marxism) - Iraqi Communist Party (Arabic: Al-hizb aš-šiyū'ī al-'irāqī)\n\nThe Iraqi Communist Party has long dominated leftist politics in Iraq. It's uneasy alliance with the Ba'ath Party, brokered by the Soviet Union, broke down in 1979, and it has since advocated armed struggle. It is secular and socialist."
+ IRQ.Neutral_Muslim_Brotherhood: "£IRQ_islamic_party (ISP) Iraqi Islamic Party"
+ IRQ.Neutral_Muslim_Brotherhood_desc: "(Moderate Islamism) - Iraqi Islamic Party (Arabic: Hizb al-Islami al-Iraqi)\n\nThe Iraqi Islamic Party is the official branch of the Muslim Brotherhood in Iraq, and function as one of the primary vehicles of Iraq's Sunni minority."
  IRQ.Neutral_Muslim_Brotherhood_2017: "£IRQ_Neutral_Muslim_Brotherhood_small Muttahidoon"
  IRQ.Neutral_Muslim_Brotherhood_2017_icon: "£IRQ_Neutral_Muslim_Brotherhood_small"
  IRQ.Neutral_Muslim_Brotherhood_2017_desc: "Moderate Islamist - Muttahidoon (Uniters for Reform Coalition) is the primary Sunni political alliance in Iraq, and is dominated by the ideology of the pan-Islamist Muslim Brotherhood. It advocates strengthening the autonomy of Iraq's Sunni regions."
- IRQ.Nat_Populism: "£IRQ_sardist Al-Tayyār al-Sadrī"
+ IRQ.Nat_Populism: "£IRQ_sardist (SIP) Sadrist Integrity Party"
  IRQ.Nat_Populism_icon: "£IRQ_sardist"
- IRQ.Nat_Populism_desc: "Iraqi Nationalism - Sadrist Integrity Party. The Sadrist Movement is a Shi'ite political movement with populist and nationalist values. While it's Sadrist militias have been backed by Iran, it seeks freedom from domination by any foreign power."
- IRQ.Nat_Fascism: "£IRQ_Nat_Autocracy_small Arab Socialist Ba'ath Party"
- IRQ.Nat_Fascism_desc: "Ba'athism\n(Arabic, romanized: Hizb al-Ba'th al-'Arabī)\nThe Arab Socialist Ba'ath Party of Iraq came to power in a military coup in 1968. Originally the same party as the pan-Arabist Syrian Ba'ath Party, the Iraqi branch adopted Iraqi nationalism as it's core ideology, with the split evolving into a blood-feud where Syria backed Iran against Iraq. Under the leadership of Saddam Hussein, it has promoted the revival of a militaristic \"Greater Mesopotamia\" based on despotism and increasing islamification of the previously secular state."
+ IRQ.Nat_Populism_desc: "(Iraqi Nationalism) - Sadrist Integrity Party (Arabic: Al-Tayyār al-Sadrī)\n\nThe Sadrist Movement is a Shi'ite political movement with populist and nationalist values. While it's Sadrist militias have been backed by Iran, it seeks freedom from domination by any foreign power."
+ IRQ.Nat_Fascism: "£IRQ_Nat_Autocracy_small (SBP) Arab Socialist Ba'ath Party"
+ IRQ.Nat_Fascism_desc: "(Ba'athism) - Arab Socialist Ba'ath Party (Arabic: Hizb al-Ba'th al-'Arabī)\n\nThe Arab Socialist Ba'ath Party of Iraq came to power in a military coup in 1968. Originally the same party as the pan-Arabist Syrian Ba'ath Party, the Iraqi branch adopted Iraqi nationalism as it's core ideology, with the split evolving into a blood-feud where Syria backed Iran against Iraq. Under the leadership of Saddam Hussein, it has promoted the revival of a militaristic \"Greater Mesopotamia\" based on despotism and increasing islamification of the previously secular state."
  IRQ.Neutral_conservatism: "£generic_Neutral_conservatism_small Conservatists"
  IRQ.Neutral_conservatism_desc: ""
- IRQ.Nat_Autocracy: "£IRQ_armed_forces Riasat Arkan Aljaysh Aleiraqiu"
+ IRQ.Nat_Autocracy: "£IRQ_armed_forces (AFQ) Armed forces of Iraq"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
- IRQ.Nat_Autocracy_desc: "Military Junta - The Armed forces of Iraq were formed in the early 1930's, and have been involved in various political activities ranging from coups, including the one which saw the overthrow of the Hashemite Dynasty,"
+ IRQ.Nat_Autocracy_desc: "(Military Junta) - Armed forces of Iraq (Arabic: Riasat Arkan Aljaysh Aleiraqiu)\n\nThe Armed forces of Iraq were formed in the early 1930's, and have been involved in various political activities ranging from coups, including the one which saw the overthrow of the Hashemite Dynasty."
 
- IRQ.Autocracy: "£IRQ_mahdi_army Jaysh Al-Mahdi"
+ IRQ.Autocracy: "£IRQ_mahdi_army (MA) Mahdi Army"
  IRQ.Autocracy_icon: "£IRQ_mahdi_army"
- IRQ.Autocracy_desc: "Shi'ite Militarism - The Mahdi army rose to prominance when it came to confronting foreign or hostile elements within Iraq, with the group being led by Muqtada Al-Sadr. The group cooperates with other Shi'ite Militias, such as the Badr Brigades."
+ IRQ.Autocracy_desc: "(Shi'ite Militarism) - Mahdi Army (Arabic: Jaysh Al-Mahdi)\n\nThe Mahdi army rose to prominance when it came to confronting foreign or hostile elements within Iraq, with the group being led by Muqtada Al-Sadr. The group cooperates with other Shi'ite Militias, such as the Badr Brigades."
 
- IRQ.Monarchist: "£IRQ_monarch Al-Hāshimiyyūn"
- IRQ.Monarchist_desc: "Monarchism - The Hashemite Dynasty in Iraq had ruled from 1921 to 1958, having been overthrown by the military. Currently, the title for the head of the house is held by Ra'ad bin Zeid."
+ IRQ.Monarchist: "£IRQ_monarch (HoH) House of Hashem"
+ IRQ.Monarchist_desc: "(Absolute Monarchy) - Hashemite Dynasty (Arabic: Al-Hāshimiyyūn)\n\nThe Hashemite Dynasty in Iraq had ruled from 1921 to 1958, having been overthrown by the military. Currently, the title for the head of the house is held by Ra'ad bin Zeid."
  IRQ.Conservative_2018: "£IRQ_Conversative_2017_small Civilized Alliance"
  IRQ.Conservative_2018_icon: "£IRQ_Liberalism_2017_small"
  IRQ.Conservative_2018_desc: "Conservative - The Civilized Alliance is one of two of the largest secular coalitions in Iraq, it's main ideologies are secularism and non-sectarinism and puts a focus on rebuilding Iraq."
