--- a/Changelog.txt
+++ b/Changelog.txt
@@ -46,6 +46,7 @@ v1.10.5
 
  Localization:
   - Fixed an error with Saddams Rage localization not appearing
+  - Redid political party names & descriptions for: PER, SAU, TUR, IRQ
 
  User Interface:
   - Added an "Unemployment Rate" map mode
