add some sub-units modifiers for the future work

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,6 +52,9 @@ v1.10.5
   - Fixed an error with Saddams Rage localization not appearing
   - Redid political party names & descriptions for: PER, SAU, TUR, IRQ
 
+ Modding Resources:
+  - Added more detailed unit modifiers for main infantry batallions as well as org modifier for existing sub-unit modifiers
+
  User Interface:
   - Added an "Unemployment Rate" map mode
   - You can now see your last quarter's GDP growth rate in the GDP tooltip
