--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -853,7 +853,7 @@
  IRQ.liberalism_2017_desc: "Liberal - The Iraqi National Movement was a coalition founded on the basis of secularism and non-sectarianism, with a mix of some Iraqi Nationalism. It is comprised of some of Iraq's largest secular parties, including Al Wataniya."
  IRQ.socialism: "£IRQ_national_congress_small (INC) Iraqi National Congress"
  IRQ.socialism_icon: "£IRQ_national_congressa_small"
- IRQ.socialism_desc: "(Liberalism) - Iraqi National Accord (Arabic: Al-Moutammar Al-Watani)\n\nThe Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
+ IRQ.socialism_desc: "(Liberalism) - Iraqi National Congress (Arabic: Al-Moutammar Al-Watani)\n\nThe Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
  IRQ.conservatism: "£IRQ_conservatism_small Islamic Dawa Party - Iraq organisation"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
  IRQ.conservatism_desc: "conservatives - Throughout Saddam Hussein's dictatorial rule, the Dawa party was subjected to a brutal campaign of Persecution and extermination, forcing most of its surviving leaders to flee to neighbouring nations and Europe, where they continued to lead the activists who remained in the country fighting the regime with organized insurrection. However, over time, disagreements and confrontations emerged between certain party members who remained in the nation and the exiled leaders, causing the party to split and a portion of the underground organisation within Iraq to form the Islamic Dawa Party-Iraq Organization led by Hashim Al-Mosawy, the party's head, who is well-known and admired among the Iraqi Shias."
@@ -3582,7 +3582,7 @@
  TUR.conservatism_desc: "(Kemalism) - Republican People's Party (Turkish: Cumhuriyet Halk Partisi)\n\nCumhuriyet Halk Partisi (Republican People's Party) is a social democratic Kemalist party founded by Atatürk himself. The party is pro-EU and many of it's members support LGBT and women's rights, and the party is generally seen as one of the more Western and progressive parties of the country.\n\nMilitary §YStanding§! from this party: §G+100§!"
  TUR.liberalism: "£TUR_liberalism (LDP) Liberal Democrat Party"
  TUR.liberalism_icon: "£TUR_liberalism"
- TUR.liberalism_desc: "(Liberalism) - Republican People's Party (Turkish: Liberal Demokrat Parti)\n\nLiberal Demokrat Parti (Liberal Democrat Party) is a classical liberal party founded by a Turkish businessman Besim Tibuk..\n\nMilitary §YStanding§! from this party: §G+50§!"
+ TUR.liberalism_desc: "(Liberalism) - Liberal Democrat Party (Turkish: Liberal Demokrat Parti)\n\nLiberal Demokrat Parti (Liberal Democrat Party) is a classical liberal party founded by a Turkish businessman Besim Tibuk..\n\nMilitary §YStanding§! from this party: §G+50§!"
  TUR.socialism: "£TUR_socialism (DSP) Democratic Left Party"
  TUR.socialism_icon: "£TUR_socialism"
  TUR.socialism_desc: "(Social Democracy) - Democratic Left Party (Turkish: Demokratik Sol Parti)\n\nDemokratik Sol Parti (Democratic Left Party) is a Kemalist socialist party that aims to reform the economy of Turkey. The party is heavily pro-European and wishes higher integration of Turkey into the EU.\n\nMilitary §YStanding§! from this party: §G+100§!"
@@ -3595,7 +3595,7 @@
  TUR.Communist-State_2015_desc: "VATAN - Vatan Partisi (Patriotic Party) is a rebranding of Maoist Kemalist Worker's Party, that stands against American expansionism. The party claims to be the vanguard of socialists, revolutionaries, nationalists and Kemalists.\n\nMilitary §YStanding§! from this party: §R-25§!"
  TUR.anarchist_communism: "£TUR_anarchist_communism (ODP) Freedom and Solidarity Party"
  TUR.anarchist_communism_icon: "£TUR_anarchist_communism"
- TUR.anarchist_communism_desc: "(Left-Wing Populism) - Workers Party (Turkish: Özgürlük ve Dayanışma Partisi)\n\nÖzgürlük ve Dayanışma Partisi (Freedom and Solidarity Party) is a left-wing populist socialist party. The main core of the party is libertarian socialism, modelled after the trade union movement of the DEV-YOL from the 1970s.\n\nMilitary §YStanding§! from this party: §R-50§!"
+ TUR.anarchist_communism_desc: "(Left-Wing Populism) - Freedom and Solidarity Party (Turkish: Özgürlük ve Dayanışma Partisi)\n\nÖzgürlük ve Dayanışma Partisi (Freedom and Solidarity Party) is a left-wing populist socialist party. The main core of the party is libertarian socialism, modelled after the trade union movement of the DEV-YOL from the 1970s.\n\nMilitary §YStanding§! from this party: §R-50§!"
  TUR.Conservative: "£TUR_Conservative (FP) Virtue Party"
  TUR.Conservative_icon: "£TUR_Conservative"
  TUR.Conservative_desc: "(Islamism) - Virtue Party (Turkish: Fazilet Partisi)\n\nFazilet Partisi (Virtue Party) is an islamist political party. Many of its current members have also been part of other islamist political parties, all of which have been banned under the secular pretense of the Turkish Republic.\n\nMilitary §YStanding§! from this party: §R-100§!"
@@ -3624,7 +3624,7 @@
  TUR.Neutral_Autocracy_reform_desc: "(Islamic Democracy) - Gülenist Movement (Turkish: Gülen Hareketi)\n\nHizmet, internationally referred to as the Gülen Movement, is a transnational Islamic social circle led by Fethullah Gülen. The group's goals are in advocating interfaith dialogue and improving the standing of Muslims world-wide, with the goal of becoming the world's leading Muslim network. Some fear that their goals are not that different from the Muslim Brotherhood, and that their main goal is the dominance of Islam.\n\nMilitary §YStanding§! from this party: §R-50§!"
  TUR.Neutral_conservatism: "£generic_Neutral_conservatism_small (MP) Nation Party"
  TUR.Neutral_conservatism_icon: "£generic_Neutral_conservatism_small"
- TUR.Neutral_conservatism_desc: "(Conservatism) - Labour Party (Turkish: Millet Partisi)\n\nMillet Partisi (Nation Party) is a conservative nationalist political party.\n\nMilitary §YStanding§! from this party: §R-50§!"
+ TUR.Neutral_conservatism_desc: "(Conservatism) - Nation Party (Turkish: Millet Partisi)\n\nMillet Partisi (Nation Party) is a conservative nationalist political party.\n\nMilitary §YStanding§! from this party: §R-50§!"
  TUR.oligarchism: "£TUR_oligarchism (DYP) True Path Party"
  TUR.oligarchism_icon: "£TUR_oligarchism"
  TUR.oligarchism_desc: "(Moderates) - True Path Party (Turkish: Doğru Yol Partisi)\n\nDoğru Yol Partisi (True Path Party) is a liberal conservative party. Many of its members were part of the Susurluk scandal where it was revealed that many of the party's MPs had been involved with the Turkish mafia.\n\nMilitary §YStanding§! from this party: §R-25§!"
