--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1933,7 +1933,7 @@
  DAG.Neutral_Muslim_Brotherhood: "£DAG_muslim_brotherhood Movement for Free Dagestan"
  DAG.Neutral_Muslim_Brotherhood_icon: "£DAG_muslim_brotherhood"
  #Nationalist
- DAG.Nat_Fascism: "£DAG_nat_fascism Supreme Union of Northen Caucasus"
+ DAG.Nat_Fascism: "£DAG_nat_fascism Supreme Union of Northern Caucasus"
  DAG.Nat_Fascism_icon: "£DAG_nat_fascism"
  DAG.Nat_Populism: "£SOV_nationalist_right_wing_populist LDPD"
  DAG.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
@@ -2793,7 +2793,7 @@
  YAM.neutral_Social_1: "£SOV_non_aligned_socialist_democrat_1 New People"
  YAM.neutral_Social_1_icon: "£SOV_non_aligned_socialist_democrat_1"
  #Nationalist
- YAM.Nat_Fascism: "£YAS_nat_fascism Northen Reclamation Front"
+ YAM.Nat_Fascism: "£YAS_nat_fascism Northern Reclamation Front"
  YAM.Nat_Fascism_icon: "£YAS_nat_fascism"
  YAM.Nat_Populism: "£SOV_nationalist_right_wing_populist LDPY"
  YAM.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
