--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,6 +34,7 @@ v1.10.5
   - Fixed internal faction event localization
   - Fixed the Muslim Brotherhood events spamming
   - Fixed missing flag for Andorra, Vatican City, and San Marino being unable to join the European Union
+  - Fixed Bonsnian army spirit providing 10 recovery rate instead on 0.1
 
  Content:
   - Added additional decisions to a variety of different internal factions
