Party Icon naming error

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3099,8 +3099,8 @@
  URA.socialism: "£URA_western_social Svobodnyy Ural"
  URA.socialism_icon: "£URA_western_social"
  #Emerging
- URA.Communist-State: "£URA_communist-state Trudovoy Front"
- URA.Communist-State_icon: "£URA_communist-state"
+ URA.Communist-State: "£URA_emerging_communism Trudovoy Front"
+ URA.Communist-State_icon: "£URA_emerging_communism"
  URA.anarchist_communism: "£URA_anarchist_communism Levyy Blok"
  URA.anarchist_communism_icon: "£URA_anarchist_communism"
  URA.anarchist_communism_desc: ""
@@ -3202,8 +3202,8 @@
  FAR.socialism: "£FAR_western_socialism Narodno-Democraticheskiy Soyuz"
  FAR.socialism_icon: "£FAR_western_socialism"
  #Emerging
- FAR.Communist-State: "£FAR_communist-state Kommunisticheskaya Partiya DVR"
- FAR.Communist-State_icon: "£FAR_communist-state"
+ FAR.Communist-State: "£FAR_emerging_communism Kommunisticheskaya Partiya DVR"
+ FAR.Communist-State_icon: "£FAR_emerging_communism"
  FAR.anarchist_communism: "£FAR_anarchist_communism Sotsialisticheskaya Al'ternativa"
  FAR.anarchist_communism_icon: "£FAR_anarchist_communism"
  #Non-Aligned
@@ -3234,8 +3234,8 @@
  ESB.socialism: "£FAR_western_socialism Narodno-Democraticheskiy Soyuz"
  ESB.socialism_icon: "£FAR_western_socialism"
  #Emerging
- ESB.Communist-State: "£FAR_communist-state Kommunisticheskaya Partiya Sibiri"
- ESB.Communist-State_icon: "£FAR_communist-state"
+ ESB.Communist-State: "£FAR_emerging_communism Kommunisticheskaya Partiya Sibiri"
+ ESB.Communist-State_icon: "£FAR_emerging_communism"
  ESB.anarchist_communism: "£FAR_anarchist_communism Sotsialisticheskaya Al'ternativa"
  ESB.anarchist_communism_icon: "£FAR_anarchist_communism"
  #Non-Aligned
@@ -3268,8 +3268,8 @@
  DON.socialism_icon: "£DON_western_socialism"
  DON.socialism_desc: "Social Democratic Party"
  #Emerging
- DON.Communist-State: "£DON_communist-state Partiya Russkikh Communistov"
- DON.Communist-State_icon: "£DON_communist-state"
+ DON.Communist-State: "£DON_emerging_communism Partiya Russkikh Communistov"
+ DON.Communist-State_icon: "£DON_emerging_communism"
  DON.Communist-State_desc: "Party of Russian Communists"
  DON.anarchist_communism: "£DON_anarchist_communism Krestyanskiy Trudovoy Soyuz"
  DON.anarchist_communism_desc: "Peasant Labour Union"
