Party Icon naming error

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3134,8 +3134,8 @@
  SIB.socialism: "£SIB_western_socialism RPSD"
  SIB.socialism_icon: "£SIB_western_socialism"
  #Emerging
- SIB.Communist-State: "£SIB_communism-statism Obyedinennaya Kommunisticheskaya Partiya"
- SIB.Communist-State_icon: "£SIB_communism-statism"
+ SIB.Communist-State: "£SIB_emerging_communism Obyedinennaya Kommunisticheskaya Partiya"
+ SIB.Communist-State_icon: "£SIB_emerging_communism"
  SIB.anarchist_communism: "£SIB_anarchist_communism Partiya Truda"
  SIB.anarchist_communism_icon: "£SIB_anarchist_communism"
  SIB.anarchist_communism_desc: ""
@@ -3168,8 +3168,8 @@
  CSB.socialism: "£SIB_western_socialism RPSD"
  CSB.socialism_icon: "£SIB_western_socialism"
  #Emerging
- CSB.Communist-State: "£SIB_communism-statism Obyedinennaya Kommunisticheskaya Partiya"
- CSB.Communist-State_icon: "£SIB_communism-statism"
+ CSB.Communist-State: "£SIB_emerging_communism Obyedinennaya Kommunisticheskaya Partiya"
+ CSB.Communist-State_icon: "£SIB_emerging_communism"
  CSB.anarchist_communism: "£SIB_anarchist_communism Partiya Truda"
  CSB.anarchist_communism_icon: "£SIB_anarchist_communism"
  CSB.anarchist_communism_desc: ""
