Reworked decision menu pictures

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,6 +36,9 @@ v1.10.5
   - Fixed missing flag for Andorra, Vatican City, and San Marino being unable to join the European Union
   - Fixed Bonsnian army spirit providing 10 recovery rate instead on 0.1
 
+ Graphics:
+  - Reworked most of the decision menu pictures
+
  Content:
   - Added additional decisions to a variety of different internal factions
   - Added some new events to Internal Factions for the religious factions
