--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -50,7 +50,7 @@
  SWE_nationalist_claims_FIN_desc: "Åland is ethnically Swedish, and the inferior Finns should hand it over immediately or face the consequences!"
 
  generic_coalition_politics_desicions: "[Root.GetFlag][Root.GetAdjective] Political Decisions"
- generic_coalition_politics_desicions_desc: "\n\n\n\n\n\n£MAIN_desctext_elections\n\n\n\n\n\n\n\n\n [Root.GetFlag]§YPolitical Laws§!:\n\n[Root.GetFlag]§YHas Elections§!: [has_elections_check]\n[Root.GetFlag]§YElection Threshold§!: [?election_threshold|%0] [term_limit_text]"
+ generic_coalition_politics_desicions_desc: "\n£MAIN_desctext_elections\n\n\n\n [Root.GetFlag]§YPolitical Laws§!:\n\n[Root.GetFlag]§YHas Elections§!: [has_elections_check]\n[Root.GetFlag]§YElection Threshold§!: [?election_threshold|%0] [term_limit_text]"
  term_limit_text: "\nTerm Limit: [?term_limit]\nCurrent Term: [?current_term]"
  has_election_no: "§RNo§!"
  has_election_yes: "§GYes§!"
@@ -765,7 +765,7 @@
 
  ### Anti Bully ###
  Anti_Bully: "Public War Weariness"
- Anti_Bully_desc: "\n\n\n\n\n\n£MAIN_desctext_weariness\n\n\n\n\n\n\n\n\nOur country is now at war. The issues that accompany conflict are now ever important. The most effective way to win a war is to keep the people's support of it going. Once the people lose their support of a conflict we have already lost.\n\n§YNote: The people do not appreciate long wars. The more decisive the war the less penalizing the war.§!\n\nCurrent War Support Penalty: [?war_support_factor_var|R0%]\n"
+ Anti_Bully_desc: "\n£MAIN_desctext_weariness\n\n\n\nOur country is now at war. The issues that accompany conflict are now ever important. The most effective way to win a war is to keep the people's support of it going. Once the people lose their support of a conflict we have already lost.\n\n§YNote: The people do not appreciate long wars. The more decisive the war the less penalizing the war.§!\n\nCurrent War Support Penalty: [?war_support_factor_var|R0%]\n"
  AB_offer_stalemate_Atk: "Offer a Ceasefire"
  AB_offer_stalemate_Atk_desc: "The war has dragged own for far too long. The combat has broken down into nothing more than an extended stalemate. It was a massive failure and the best option for us is to sue for peace."
  AB_offer_stalemate_Def: "Offer a Ceasefire"
