--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -12,6 +12,23 @@
  VICTORY_POINTS_9073: "Lahti"
  VICTORY_POINTS_9228: "Mariehamn"
 
+ #Sweden
+ VICTORY_POINTS_6050: "Stockholm"
+ VICTORY_POINTS_383: "Göteborg"
+ VICTORY_POINTS_9279: "Malmö"
+ VICTORY_POINTS_9149: "Uppsala"
+ VICTORY_POINTS_9393: "Linköping"
+ VICTORY_POINTS_35: "Västerås"
+ VICTORY_POINTS_9209: "Örebro"
+ VICTORY_POINTS_11380: "Norrköping"
+ VICTORY_POINTS_6345: "Helsingborg"
+ VICTORY_POINTS_9329: "Jönköping"
+ VICTORY_POINTS_6132: "Umeå"
+ VICTORY_POINTS_6331: "Borås"
+ VICTORY_POINTS_11163: "Huddinge"
+ VICTORY_POINTS_9151: "Sundsvall"
+ VICTORY_POINTS_408: "Visby"
+
  VICTORY_POINTS_13266: "Parachinar"
  VICTORY_POINTS_13264: "Mohmand"
  VICTORY_POINTS_13265: "Khyber"
@@ -133,45 +150,7 @@
  VICTORY_POINTS_9296: "Kristiansand"
  VICTORY_POINTS_11037: "Gol"
  VICTORY_POINTS_9135: "Otta"
- VICTORY_POINTS_101: "Kiruna"
- VICTORY_POINTS_6165: "Luleå"
- VICTORY_POINTS_46: "Östersund"
- VICTORY_POINTS_11091: "Gävle"
- VICTORY_POINTS_9151: "Sundsvall"
- VICTORY_POINTS_3113: "Umeå"
- VICTORY_POINTS_6200: "Lycksele"
- VICTORY_POINTS_9088: "Örnsköldsvik"
- VICTORY_POINTS_9143: "Skellefteå"
- VICTORY_POINTS_6050: "Stockholm"
- VICTORY_POINTS_9149: "Uppsala"
- VICTORY_POINTS_156: "Falun"
- VICTORY_POINTS_11114: "Karlstad"
- VICTORY_POINTS_35: "Västerås"
- VICTORY_POINTS_11188: "Eskilstuna"
- VICTORY_POINTS_9209: "Örebro"
- VICTORY_POINTS_383: "Göteborg"
- VICTORY_POINTS_9279: "Malmö"
- VICTORY_POINTS_11160: "Kristianstad"
- VICTORY_POINTS_6345: "Helsingborg"
- VICTORY_POINTS_6331: "Borås"
- VICTORY_POINTS_9329: "Jönköping"
- VICTORY_POINTS_9393: "Linköping"
- VICTORY_POINTS_11380: "Norrköping"
- VICTORY_POINTS_242: "Växjö"
- VICTORY_POINTS_11215: "Karlskrona"
- VICTORY_POINTS_299: "Kalmar"
- VICTORY_POINTS_6258: "Visby"
- VICTORY_POINTS_6310: "Uddevalla"
- VICTORY_POINTS_69: "Åmål"
- VICTORY_POINTS_3375: "Lidköping"
- VICTORY_POINTS_6412: "Halmstad"
- VICTORY_POINTS_295: "Trollhättan"
- VICTORY_POINTS_6147: "Mora"
- VICTORY_POINTS_6142: "Ivalo"
- VICTORY_POINTS_3107: "Sodankylä"
- VICTORY_POINTS_11155: "Gällivare"
  VICTORY_POINTS_9093: "Lycksele"
- VICTORY_POINTS_9108: "Piteå"
  VICTORY_POINTS_179: "Kongsvinger"
  VICTORY_POINTS_9347: "Hamburg"
  VICTORY_POINTS_6389: "Kiel"
